# dcs-aoc-2023

./: README.md  pyproject.toml
tests/: test_day1.py
