[tool.poetry]
name = "dcs-aoc-2023"
version = "0.1.0"
description = "Advent of code challenges for 2023"
authors = ["Austin Hovland <austin_hovland@vrtx.com>"]
readme = "README.md"

packages = [
    { include = "aoc", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pre-commit = "~2.17.0"
ruff = "~0.0.226"
pytest = "^7.4.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
force-exclude = true

[tool.mypy]
python_version = 3.9
warn_unused_configs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
pretty = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true